# rulings-website

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  MANIFEST.in  Makefile  README.md  justfile  package.json  pyproject.toml  svelte.config.js  tsconfig.json  vite.config.ts
.claude/: settings.json
.claude/agents/: reviewer.md
.claude/hooks/: pst-mandate.sh
.github/: copilot-instructions.md
.github/workflows/: release.yml  test.yml
.pst/: mandate.md  skill.md  tickets
.pst/details/: 1-stack-rework.md  17-krcg-static-dispatch.md  2-deploy.md  22-bug-catalog.md  25-proposal-page.md  27-supersede.md  28-reminder-kind.md  42-tailwind-foundation.md  65-share-island-state.md  9-svelte-island.md
ansible/: .ansible-lint  .gitignore  .yamllint  README.md  ansible.cfg  justfile  requirements.yml
ansible/inventories/production/: hosts.ini
ansible/inventories/production/group_vars/all/: vars.yml  vault.yml
ansible/playbooks/: deploy.yml
ansible/roles/asgi_service/defaults/: main.yml
ansible/roles/asgi_service/files/: rulings_github_app.pem.vault
ansible/roles/asgi_service/handlers/: main.yml
ansible/roles/asgi_service/tasks/: main.yml
ansible/roles/asgi_service/templates/: env.j2  service.j2
ansible/secrets/: .gitignore  age-recipients.txt  vault-pass.age
ansible/tasks/: app_user.yml  fetch_release.yml
ansible/vars/: release_artifacts.yml
src/front/css/: app.css  layout.scss
src/front/island/: Adaptations.svelte  CardSearch.svelte  GroupEditor.svelte  PrefixEditor.svelte  Proof.svelte  ReferenceModal.svelte  RulingCard.svelte  RulingsEditor.svelte  SymbolEditor.svelte  TokenEditor.svelte  groupStore.svelte.ts  main.ts  tokens.ts  types.ts
src/front/js/: admin.ts  chrome.ts  groups.ts  index.ts  layout.ts  net.ts  proposal.ts
src/vtesrulings/: __init__.py  api.py  db.py  discord.py  models.py  proposal.py  repository.py  rulings.py  scraper.py  utils.py
src/vtesrulings/static/: site.webmanifest
src/vtesrulings/templates/: 404.html  _macros.html  admin.html  groups.html  index.html  layout.html  proposal.html
tests/: conftest.py  test_api.py  test_repository.py
tests/fixtures/rulings/: SOURCE
