[build-system]
requires = ["uv_build>=0.7.19,<0.8"]
build-backend = "uv_build"

[project]
name = "vtes-rulings"
version = "1.2.0"
authors = [{ name = "VEKN" }]
description = "Website for VTES cards rulings"
keywords = ["vtes", "Vampire: The Eternal Struggle", "CCG"]
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.13"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: JavaScript",
    "Programming Language :: Python :: 3.13",
    "Topic :: Games/Entertainment",
    "Topic :: Internet :: WWW/HTTP",
]
dependencies = [
    "aiofiles>=24",
    "aiohttp>=3",
    "arrow>=1",
    "asgiref>=3",
    "click>=8",
    "fastapi>=0.115",
    "gitpython>=3",
    "hypercorn>=0.17",
    "itsdangerous>=2",
    "jinja2>=3",
    "krcg>=5.9",
    "orjson>=3",
    "psycopg[pool]>=3",
    "pydantic>=2",
    "pyjwt[crypto]>=2",
    "python-multipart>=0.0.9",
    "pyyaml>=6",
    "unidecode>=1",
    "yamlfix>=1",
]

[project.scripts]
rulings-web = "vtesrulings:main"

[project.urls]
Repository = "https://github.com/vtes-biased/rulings-website"

[dependency-groups]
dev = [
    "asgi-lifespan",
    "httpx",
    "ipdb",
    "ipython",
    "pytest>=8",
    "pytest-asyncio",
    "python-dotenv",
    "ruff",
    "ty>=0.0.61",
    # ansible deploy (see ansible/README.md)
    "ansible-core>=2.17",
    "ansible-lint>=25.0",
    "yamllint>=1.35",
]

[tool.uv.build-backend]
module-name = "vtesrulings"
wheel-exclude = ["**/.DS_Store"]
source-exclude = ["**/.DS_Store"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ty.environment]
python-version = "3.13"

[tool.pytest.ini_options]
testpaths = ["tests"]   # don't recurse into ansible/galaxy_collections/ (vendored by `just galaxy`)
addopts = "-vvs --strict-markers -m 'not discord'"
markers = ["discord: marks tests as running against Discord Test Server"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"

[tool.yamlfix]
line_length = 120
sequence_style = "block_style"
